// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@handl/debug-manager >> CacheManager >> CACHE_ENTRY_ADDED >> correct data emitted 1`] = `
Array [
  Object {
    "cacheType": "requestFieldPaths",
    "cachemapOptions": Object {
      "cacheHeaders": Object {
        "cacheControl": "public, max-age=5",
      },
      "tag": undefined,
    },
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "handlID": "123456789",
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
    },
    "hash": "5256db516a2438a7e5488a00413f4809",
    "options": Object {
      "awaitDataCaching": true,
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "value": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
  Object {
    "cacheType": "dataEntities",
    "cachemapOptions": Object {
      "cacheHeaders": Object {
        "cacheControl": "public, max-age=5",
      },
      "tag": undefined,
    },
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "handlID": "123456789",
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
    },
    "hash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
    "options": Object {
      "awaitDataCaching": true,
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "value": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook",
    },
  },
  Object {
    "cacheType": "queryResponses",
    "cachemapOptions": Object {
      "cacheHeaders": Object {
        "cacheControl": "public, max-age=5",
      },
      "tag": undefined,
    },
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "handlID": "123456789",
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
    },
    "hash": "651f14b3df12bef942ed3b1ba9e7f1f1",
    "options": Object {
      "awaitDataCaching": true,
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
    "value": Object {
      "cacheMetadata": Object {
        "query": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 297471605000,
        },
        "query.organization": Object {
          "cacheControl": Object {
            "maxAge": 5,
            "public": true,
          },
          "etag": undefined,
          "ttl": 297471605000,
        },
      },
      "data": Object {
        "organization": Object {
          "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
          "email": "",
          "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
          "login": "facebook",
          "name": "Facebook",
          "url": "https://github.com/facebook",
        },
      },
    },
  },
]
`;

exports[`@handl/debug-manager >> CacheManager >> CACHE_ENTRY_QUERIED >> correct data emitted 1`] = `
Array [
  Object {
    "cacheType": "requestFieldPaths",
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "handlID": "123456789",
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
    },
    "hash": "5256db516a2438a7e5488a00413f4809",
    "options": Object {
      "awaitDataCaching": true,
    },
    "result": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
  Object {
    "cacheType": "dataEntities",
    "context": Object {
      "fieldTypeMap": Map {
        "query.organization" => Object {
          "hasArguments": true,
          "hasDirectives": false,
          "isEntity": true,
          "isInterface": false,
          "isUnion": false,
          "possibleTypes": Array [],
          "typeIDValue": undefined,
          "typeName": "Organization",
        },
      },
      "handlID": "123456789",
      "operation": "query",
      "operationName": "",
      "queryFiltered": false,
      "request": "",
    },
    "hash": "Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
    "options": Object {
      "awaitDataCaching": true,
    },
    "result": Object {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
    },
    "stats": Object {
      "duration": 0,
      "endTime": 0,
      "startTime": 0,
    },
  },
]
`;
